feat: add endpoint to retrieve all communities a user is subscribed to
